# flowlens

./: .env.example  .gitignore  AGENTS.md  BENCHMARK_REPORT.md  CLAUDE.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  REFACTOR_PLAN.md  benchmark.py  f1_research.py  pyproject.toml
app/: README.md  SESSION_LOG.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  vite.config.ts
app/prototype/: README.md  cdp_connect.py  cdp_controlled_tab.py  cdp_targets.py  cdp_xhs_probe.py  chrome_discovery.py  demo_run.py
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
apps/socai/: .gitignore  README.md  SESSION_LOG.md  index.html  package-lock.json  package.json  requirements.txt
archive/legacy_desktop_app/: README.md  index.html  package.json
archive/legacy_mcp/: README.md  manual_screen_smoke.py  screen.py  server_snapshot.py
chrome_extension/: COMPARISON.md  background.js  content.js  content_xhs.js  manifest.json  observer.js  observer_viewer.html  observer_viewer.js  popup.html  popup.js  sidepanel.html  sidepanel.js  test_dom_approach.py  watch_panel.js
clawvision/: __init__.py  __main__.py  cli.py  debug_cli.py  desktop_cli.py  extension_cli.py  extension_ops.py  reporting.py  runtime.py  screen.py  server.py
clawvision/agent/: __init__.py  __main__.py  bridge.py  composer.py  local_llm.py  media.py  recorder.py  task_agent.py  tasks.py  verification.py  xhs_agent.py
clawvision/chatbots/: __init__.py  cleanup.py  cli.py  companion.py  models.py  reporting.py  runner.py  sites.py  visible_verifier.py  vision_diff.py  vision_profiles.py
clawvision/core/: __init__.py  bridge.py  composer.py  desktop.py  ocr_layout.py  reporting.py  runtime.py  watch.py
clawvision/debug/: macos.py  visual_debug.py  workflows.py
clawvision/observer/: analysis.py  cli.py  paths.py  service.py  store.py
clawvision/perception/: __init__.py  apple_ocr.py  grounding.py  llm.py  local_llm.py  media.py  ocr.py  policy.py  transcriber.py
clawvision/reasoning/: __init__.py  tasks.py
clawvision/skills/: __init__.py  base.py  xiaohongshu_skill.py
clawvision/vision/: __init__.py  apple_ocr.py  detector.py  grounding.py  layout.py  llm.py  ocr.py  smart_locator.py  transcriber.py
clawvision/workflows/: __init__.py  orchestrator.py  research_agent.py  xiaohongshu.py
desktop_app/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop_app/src/: main.ts  styles.css
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/src/: lib.rs
docs/: desktop-cdp-design-plan.md  runtime-refactor-plan.md
flowlens/: __init__.py  __main__.py  auth_cli.py  cli.py  debug_cli.py  desktop_cli.py  extension_cli.py  extension_ops.py  mcp_server.py  run_cli.py  server.py  xhs_cli.py
flowlens/agent/: backends.py  cli.py  loop.py  tool.py
flowlens/cdp/: __init__.py  client.py  diagnostics.py  discovery.py  errors.py  page.py  session.py  targets.py
flowlens/core/: auth.py  bridge.py  composer.py  desktop.py  process_metrics.py  recorder.py  reporting.py  runtime.py  verification.py  watch.py
flowlens/debug/: __init__.py  macos.py  visual_debug.py  workflows.py
flowlens/knowledge/: __init__.py  loader.py
flowlens/mcp/: __init__.py  runtime.py  server.py
flowlens/observer/: __init__.py  analysis.py  cli.py  paths.py  service.py  store.py
flowlens/perception/: __init__.py  detector.py  grounding.py  llm.py  local_llm.py  media.py  policy.py  transcriber.py
scripts/: benchmark_webuse_models.py  bootstrap_macos.sh  build_app.sh  build_desktop_app.sh  generate_icons.py  prepare_desktop_runtime.sh  verify_packaged_xhs_overlay.py
skills/: .env.example  .gitignore  .gitmodules  INSTALL.md  README.md  SKILL.md  accounts.example.json  browser_session.sh  env.example.txt  full_demo.js  interactive_explore.js  keep_browser_open.js  persistent_scrape.js  requirements.txt  setup.sh  stable_demo.js  start.sh
socai/: __init__.py  __main__.py  auth_cli.py  cli.py  debug_cli.py  desktop_cli.py  extension_cli.py  extension_ops.py  run_cli.py  server.py  xhs_cli.py
tests/: manual_local_llm.py  manual_local_llm_stream.py  manual_verify_fixes.py  manual_verify_fixes_v2.py  manual_visual_debug.py  manual_watch_mode.py  manual_xhs_carousel.py  manual_xhs_research.py  manual_xhs_task_workflows.py  manual_xhs_user_analysis.py  manual_xhs_video_task.py  run_full_eval.py  test_agent_loop_helpers.py  test_agent_run_state.py  test_auth_cli.py  test_backends.py  test_bridge.py  test_carousel.py  test_chatbots.py  test_composer.py  test_desktop_cli.py  test_desktop_window_session.py  test_executor.py  test_extension_agent.py  test_extension_ops.py  test_knowledge_extraction.py  test_knowledge_loader.py  test_local_backend.py  test_macos.py  test_media_processor.py  test_model_policy.py  test_observer.py  test_package_layout.py  test_pipeline_comparison.py  test_process_metrics.py  test_reporting.py  test_research_agent.py  test_runtime_env.py  test_screen.py  test_skill.py  (+17 more)
(+203 files in other folders)
