[package]
name = "socai_app"
version = "0.1.0"
description = "Socai CDP-first desktop prototype"
authors = ["Tony Chong"]
edition = "2021"

[lib]
name = "socai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
